Endpoint name changed
